--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,7 @@ bind C-l send-keys 'C-l'
  ## Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-set-option -g default-command "reattach-to-user-namespace -l zsh" # or bash...
+set-option -g default-command "reattach-to-user-namespace -l $SHELL" # or bash...
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 #
@@ -59,8 +59,29 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #binding the send- prefix so that if any program wants to use ctrl+B they could use it by pressing he key combination twice
 bind C-a send-prefix
 
-# for tmux-yank plugin
-run-shell ~/tmux-yank/yank.tmux
-
 # increase the scroll buffer for tmux
 set-option -g history-limit 30000
+
+# options related to tmux-resurrect plugin
+# for vim
+set -g @resurrect-strategy-vim 'session'
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
+# for pane content resurrect
+set -g @resurrect-capture-pane-contents 'on'
+
+##########PLUGIN MANAGER###########
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+#tmux resurrect - Reload the sessions after machine restart
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# copy to the system clipboard
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
