--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,6 +62,17 @@ bind C-a send-prefix
 # increase the scroll buffer for tmux
 set-option -g history-limit 30000
 
+#set inactive/active window styles
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
+
+# set the pane border colors 
+set -g pane-border-fg colour250
+set -g pane-border-bg colour236
+set -g pane-active-border-fg colour250 
+set -g pane-active-border-bg colour250
+
+
 # options related to tmux-resurrect plugin
 # for vim
 set -g @resurrect-strategy-vim 'session'
