--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,14 @@
 # ~/.tmux.conf
 set -g default-terminal "screen-256color"
-set -g status-bg colour235
-set -g status-fg white
+# set -g status-bg colour235
+# set -g status-fg white
+
 # set the prefix to ctrl-a
 set-option -g prefix C-a
 
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
-
-set -g pane-border-fg colour102
-set -g pane-border-bg black
-set -g pane-active-border-fg green
-set -g pane-active-border-bg black
+set -g automatic-rename off # rename window to reflect current program
+set -g renumber-windows on  # renumber windows when a window is closed
+set -g status-interval 10     # redraw status line every 10 seconds
 
 # Spliting made easy
 bind | split-window -h
@@ -21,6 +18,9 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+#copy paste to Mac clipboard
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \; display-message "copied to system clipboard"
 
 # Start window numbering at 1
 set-option -g base-index 1
@@ -34,6 +34,15 @@ set -g mouse on
 
 # # Use the system clipboard
 #set-option -g default-command "reattach-to-user-namespace -l bash"
+
+# copy to Mac OSX clipboard
+if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
+# copy to X11 clipboard
+if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
+if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
+# copy to Windows clipboard
+if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
+if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
 
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -62,17 +71,6 @@ bind C-a send-prefix
 # increase the scroll buffer for tmux
 set-option -g history-limit 30000
 
-#set inactive/active window styles
-set -g window-style 'fg=colour247,bg=colour236'
-set -g window-active-style 'fg=colour250,bg=black'
-
-# set the pane border colors 
-set -g pane-border-fg colour250
-set -g pane-border-bg colour236
-set -g pane-active-border-fg colour250 
-set -g pane-active-border-bg colour250
-
-
 # options related to tmux-resurrect plugin
 # for vim
 set -g @resurrect-strategy-vim 'session'
@@ -81,10 +79,144 @@ set -g @resurrect-strategy-nvim 'session'
 # for pane content resurrect
 set -g @resurrect-capture-pane-contents 'on'
 
+######### THEME RELATED SETTINGS ########
+# setting related to tmux-theme
+# set -g @theme "solarized"
+# set -g @theme-background "dark"
+
+# set-window-option -g window-status-current-fg black
+# set-window-option -g window-status-current-bg green
+
+# set -g pane-border-fg colour102
+# set -g pane-border-bg black
+# set -g pane-active-border-fg green
+# set -g pane-active-border-bg black
+
+#set inactive/active window styles
+# set -g window-style 'fg=colour247,bg=colour236'
+# set -g window-active-style 'fg=colour250,bg=black'
+
+# set the pane border colors 
+# set -g pane-border-fg colour250
+# set -g pane-border-bg colour236
+# set -g pane-active-border-fg colour250 
+# set -g pane-active-border-bg colour250
+
+# pane border style, possible values are:
+#   - thin (default)
+#   - fat
+tmux_conf_theme_pane_border_style=thin
+
+# pane borders colours:
+tmux_conf_theme_pane_border='#444444'                   # gray
+tmux_conf_theme_pane_active_border='#00afff'            # light blue
+
+# pane indicator colours
+tmux_conf_theme_pane_indicator='#00afff'                # light blue
+tmux_conf_theme_pane_active_indicator='#00afff'         # light blue
+
+# status line style
+tmux_conf_theme_message_fg='#000000'                    # black
+tmux_conf_theme_message_bg='#ffff00'                    # yellow
+tmux_conf_theme_message_attr='bold'
+
+# status line command style (<prefix> : Escape)
+tmux_conf_theme_message_command_fg='#ffff00'            # yellow
+tmux_conf_theme_message_command_bg='#000000'            # black
+tmux_conf_theme_message_command_attr='bold'
+
+# window modes style
+tmux_conf_theme_mode_fg='#000000'                       # black
+tmux_conf_theme_mode_bg='#ffff00'                       # yellow
+tmux_conf_theme_mode_attr='bold'
+
+# status line style
+tmux_conf_theme_status_fg='#8a8a8a'                     # light gray
+tmux_conf_theme_status_bg='#080808'                     # dark gray
+tmux_conf_theme_status_attr='none'
+
+# window status style
+#   - built-in variables are:
+#     - #{circled_window_index}
+tmux_conf_theme_window_status_fg='#8a8a8a'              # light gray
+tmux_conf_theme_window_status_bg='#080808'              # dark gray
+tmux_conf_theme_window_status_attr='none'
+tmux_conf_theme_window_status_format='#I #W'
+#tmux_conf_theme_window_status_format='#{circled_window_index} #W'
+#tmux_conf_theme_window_status_format='#I #W#{?window_bell_flag,🔔,}#{?window_zoomed_flag,🔍,}'
+
+# window current status style
+#   - built-in variables are:
+#     - #{circled_window_index}
+tmux_conf_theme_window_status_current_fg='#000000'      # black
+tmux_conf_theme_window_status_current_bg='#00afff'      # light blue
+tmux_conf_theme_window_status_current_attr='bold'
+tmux_conf_theme_window_status_current_format='#I #W'
+#tmux_conf_theme_window_status_current_format='#{circled_window_index} #W'
+#tmux_conf_theme_window_status_current_format='#I #W#{?window_zoomed_flag,🔍,}'
+
+# window activity status style
+tmux_conf_theme_window_status_activity_fg='default'
+tmux_conf_theme_window_status_activity_bg='default'
+tmux_conf_theme_window_status_activity_attr='underscore'
+
+# window bell status style
+tmux_conf_theme_window_status_bell_fg='#ffff00'         # yellow
+tmux_conf_theme_window_status_bell_bg='default'
+tmux_conf_theme_window_status_bell_attr='blink,bold'
+
+# window last status style
+tmux_conf_theme_window_status_last_fg='#00afff'         # light blue
+tmux_conf_theme_window_status_last_bg='default'
+tmux_conf_theme_window_status_last_attr='none'
+
+# status left/right sections separators
+tmux_conf_theme_left_separator_main=''
+tmux_conf_theme_left_separator_sub='|'
+tmux_conf_theme_right_separator_main=''
+tmux_conf_theme_right_separator_sub='|'
+
+# clock colors
+tmux_conf_theme_clock_colour='#00afff' # light blue
+tmux_conf_theme_clock_style='24'
+
+# focused window
+tmux_conf_theme_focused_pane_fg='default' # default
+tmux_conf_theme_focused_pane_bg='#282828' # default
+
+# unfocused window fg=colour247,bg=colour236
+tmux_conf_theme_unfocused_pane_fg='default' # default
+tmux_conf_theme_unfocused_pane_bg='#404040' # grey
+
+# set -g display-panes-colour "$tmux_conf_theme_pane_indicator"
+# set -g display-panes-active-colour "$tmux_conf_theme_pane_active_indicator"
+
+# set -g status-style "fg=$tmux_conf_theme_status_fg,bg=$tmux_conf_theme_status_bg,$tmux_conf_theme_status_attr"
+# set -g status-left-style "fg=$tmux_conf_theme_status_fg,bg=$tmux_conf_theme_status_bg,$tmux_conf_theme_status_attr"
+# set -g status-right-style "fg=$tmux_conf_theme_status_fg,bg=$tmux_conf_theme_status_bg,$tmux_conf_theme_status_attr"
+
+# setw -g window-status-style "fg=$tmux_conf_theme_window_status_fg,bg=$tmux_conf_theme_window_status_bg,$tmux_conf_theme_window_status_attr"
+# setw -g window-status-format "$tmux_conf_theme_window_status_format"
+# setw -g window-status-current-style "fg=$tmux_conf_theme_window_status_current_fg,bg=$tmux_conf_theme_window_status_current_bg,$tmux_conf_theme_window_status_current_attr"
+# setw -g window-status-current-format "$tmux_conf_theme_window_status_current_format"
+# setw -g window-status-activity-style "fg=$tmux_conf_theme_window_status_activity_fg,bg=$tmux_conf_theme_window_status_activity_bg,$tmux_conf_theme_window_status_activity_attr"
+# setw -g window-status-bell-style "fg=$tmux_conf_theme_window_status_bell_fg,bg=$tmux_conf_theme_window_status_bell_bg,$tmux_conf_theme_window_status_bell_attr"
+# setw -g window-status-last-style "fg=$tmux_conf_theme_window_status_last_fg,bg=$tmux_conf_theme_window_status_last_bg,$tmux_conf_theme_window_status_last_attr"
+
+# setw -g clock-mode-colour "$tmux_conf_theme_clock_colour"
+# setw -g clock-mode-style "$tmux_conf_theme_clock_style"
+
+# setw -g window-style "fg=$tmux_conf_theme_unfocused_pane_fg,bg=$tmux_conf_theme_unfocused_pane_bg"
+# setw -g window-active-style "fg=$tmux_conf_theme_focused_pane_fg,bg=$tmux_conf_theme_focused_pane_bg"
+
+set -g @themepack 'powerline/block/cyan'
+
 ##########PLUGIN MANAGER###########
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+# tmux theme
+# set -g @plugin "dweidner/tmux-theme"
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
@@ -93,6 +225,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # copy to the system clipboard
 set -g @plugin 'tmux-plugins/tmux-yank'
+# theme pack
+set -g @plugin 'jimeh/tmux-themepack'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
