Now my neoVim works on tmux too

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,8 @@
 set -g default-terminal "screen-256color"
 # set -g status-bg colour235
 # set -g status-fg white
-
+# Add truecolor support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 # set the prefix to ctrl-a
 set-option -g prefix C-a
 
@@ -208,6 +209,7 @@ tmux_conf_theme_unfocused_pane_bg='#404040' # grey
 
 # setw -g window-style "fg=$tmux_conf_theme_unfocused_pane_fg,bg=$tmux_conf_theme_unfocused_pane_bg"
 # setw -g window-active-style "fg=$tmux_conf_theme_focused_pane_fg,bg=$tmux_conf_theme_focused_pane_bg"
+
 
 set -g @themepack 'powerline/block/cyan'
 
