Added escape to the neovim settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,9 +33,6 @@ set -g mouse on
 # Scrolling works as expected
 #set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-# # Use the system clipboard
-#set-option -g default-command "reattach-to-user-namespace -l bash"
-
 # copy to Mac OSX clipboard
 if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 # copy to X11 clipboard
@@ -59,6 +56,7 @@ bind C-l send-keys 'C-l'
  ## Use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# # Use the system clipboard
 set-option -g default-command "reattach-to-user-namespace -l $SHELL" # or bash...
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
@@ -67,7 +65,7 @@ bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux pa
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 #binding the send- prefix so that if any program wants to use ctrl+B they could use it by pressing he key combination twice
-bind C-a send-prefix
+bind C-b send-prefix
 
 # increase the scroll buffer for tmux
 set-option -g history-limit 30000
